--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
+    "swiper": "^3.4.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
   },
