--- a/.babelrc
+++ b/.babelrc
@@ -11,8 +11,8 @@
   "plugins": ["transform-vue-jsx","transform-runtime", [
     "component",
       {
-        "libraryName": "element-ui",
-        "styleLibraryName": "theme-chalk"
+        "libraryName": "mint-ui",
+        "style": true
       }
   ]]
 }
